tests/snapshots/snapshots__tree_collapsed.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Variables ───────────────────────────┐
│› ▶ atmosphere                        │
│  ▶ ocean                             │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
