tests/snapshots/snapshots__tree_expanded_atmosphere.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Variables ───────────────────────────┐
│› ▼ atmosphere                        │
│      temperature                     │
│      pressure                        │
│    ◆ lat                             │
│  ▶ ocean                             │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
