tests/snapshots/snapshots__tree_selection_on_variable.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Variables ───────────────────────────┐
│  ▼ atmosphere                        │
│›     temperature                     │
│      pressure                        │
│    ◆ lat                             │
│  ▶ ocean                             │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
